# Anomaly-Detection-Robot

./: CMakeLists.txt  package.xml  readme.md
.github/workflows/: build_and_coveralls.yml
include/anomaly_detection_robot/: ADRobot.h  detect_anomaly.h  navigation.h  perception.h
maps/: house_anom_map.pgm  house_anom_map.yaml
results/: cppcheck.txt  cpplint.txt
src/: ADRobot.cpp  detect_anomaly.cpp  navigation.cpp  node.cpp  perception.cpp
test/: ADRobot_test.cpp  main.cpp  navigation_test.cpp  perception_test.cpp
world/: turtlebot3_house.sdf
